# h7webServer

./: .gitignore  CMakeLists.txt  README.md  STM32H723ZGTX_FLASH.ld  memory-H723ZG.txt  readme.txt  startup_stm32h723zgtx.s
Core/Inc/: httpserver_netconn.h  lwipopts.h  page.h  stm32_assert.h  stm32h7xx_hal_conf.h
Core/Src/: app_ethernet.c  blinky_threads.cpp  ethernetif.c  httpserver_netconn.c  main.c  page.cpp  somePages.cpp  somePages.h
cmake/: gcc-arm-none-eabi.cmake
lib/h7hal/: CMakeLists.txt
lib/h7lwip/: CMakeLists.txt
lib/h7rtos/: CMakeLists.txt
